# stir

./: .editorconfig  .gitmodules  LICENSE  README.md  buildfile  manifest  meson.build
src/: meson.build
src/stir/: math.cpp  math.hpp  math_common.cpp  math_common.hpp  math_config.hpp  math_def.hpp  math_fmt.hpp  math_mipp.cpp  math_mipp.hpp  math_mipp_fmt.hpp  math_ref.cpp  math_ref.hpp  math_sse.hpp  math_xsimd.hpp
src/stir/math/: common.cpp  defs.hpp  format.hpp  math.hpp  neon.cpp  neon.hpp  neon_impl.hpp  neon_prefix.hpp  ref.cpp  ref.hpp  ref_prefix.hpp  sse.hpp  sse_impl.hpp  sse_prefix.hpp
subprojects/: nanobench.wrap
subprojects/packagefiles/nanobench-patch/: meson.build
tests/: benchmark.cpp  buildfile  main.cpp  math.benchmark.cpp  math.common.tests.cpp  math.defs.tests.cpp  math.tests.cpp  meson.build
